--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,15 @@
-.App {
+/* Thoughts on color scheme:
+Primary color - #de7812
+Split comp #1 - #7812de
+Spli comp #2 - #12dede */
+
+/* .App {
   text-align: center;
-}
+  background-color: #fffbf7;
+  background-color: blue;
+} */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,17 +18,21 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
-.App-link {
+/* .App-link {
   color: #61dafb;
+} */
+
+/* https://stackoverflow.com/questions/12811149/what-does-the-dot-mean-in-css */
+
+.About .about-text {
+  padding: 25px;
+  margin: auto;
+  max-width: 725px;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* .Header .nav-item {
+  color: red;
+} */
