--- a/src/bootstrap.css
+++ b/src/bootstrap.css
@@ -43,7 +43,7 @@
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
-    background-color: #fff;
+    background-color: #f0f0f0;
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   }
